--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </section>
             <nav class="navbar seven columns">
                 <a href="na" class="row navbar-item"><div>North America</div></a>
-                <a href="#" class="row navbar-item inactive"><div>Africa</div></a>
-                <a href="#" class="row navbar-item inactive"><div>Antarctica</div></a>
-                <a href="#" class="row navbar-item inactive"><div>Asia</div></a>
-                <a href="#" class="row navbar-item inactive"><div>Europe</div></a>
-                <a href="#" class="row navbar-item inactive"><div>Oceania</div></a>
-                <a href="#" class="row navbar-item inactive"><div>South America</div></a>
+                <a href="" class="row navbar-item inactive"><div>Africa</div></a>
+                <a href="" class="row navbar-item inactive"><div>Antarctica</div></a>
+                <a href="" class="row navbar-item inactive"><div>Asia</div></a>
+                <a href="" class="row navbar-item inactive"><div>Europe</div></a>
+                <a href="" class="row navbar-item inactive"><div>Oceania</div></a>
+                <a href="" class="row navbar-item inactive"><div>South America</div></a>
                 </div>
             </nav>
         </div>
