move to generators

--- a/index.html
+++ b/index.html
@@ -3,29 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/skeleton.css">
-    <link rel="stylesheet" href="/css/custom.css">
     <title>Climber's Guide</title>
+    <link rel="stylesheet" href="/css/cg.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <section class="main five columns">
-                <a href="/" class="title"><h4>Climber's Guide</h4></a>
-            </section>
-            <nav class="navbar seven columns">
-                <a href="na" class="row navbar-item"><div>North America</div></a>
-                <a href="" class="row navbar-item inactive"><div>Africa</div></a>
-                <a href="" class="row navbar-item inactive"><div>Antarctica</div></a>
-                <a href="" class="row navbar-item inactive"><div>Asia</div></a>
-                <a href="" class="row navbar-item inactive"><div>Europe</div></a>
-                <a href="" class="row navbar-item inactive"><div>Oceania</div></a>
-                <a href="" class="row navbar-item inactive"><div>South America</div></a>
-                </div>
-            </nav>
-        </div>
+    <div class="title home">
+        <a href="/"><h2>Climber's Guide</h2></a>
+    </div>
+    <div class="navbar home">
+        <a href="book"><div>guidebook</div></a>
     </div>
 </body>
 </html>
