savepoint. super messy

--- a/book/index.html
+++ b/book/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guidebook</title>
-    <link rel="stylesheet" href="/css/cg.css">
-    <script src="/js/book.js"></script>
+    <link rel="stylesheet" href="css/book.css">
+    <script src="js/book.js"></script>
 </head>
-<body></body>
+<body>
+    <div id="info" class="mini"></div>
+    <div id="list"></div>
+    <div id="map"></div>
+</body>
 </html>
