initial rock protection charts

--- a/site/index.html
+++ b/site/index.html
@@ -6,12 +6,12 @@
     <title>Climber's Guide</title>
     <link rel="stylesheet" href="/css/cg.css">
 </head>
-<body>
-    <div class="title home">
-        <a href="/"><h2>Climber's Guide</h2></a>
+<body class="container">
+    <div class="row center">
+        <h2>Climber's Guide</h2>
     </div>
-    <div class="navbar home">
-        <a href="book"><div>guidebook</div></a>
+    <div class="row navbar center">
+        <a href="rock-protection">Rock Protection</a>
     </div>
 </body>
 </html>
