--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Climber's Guide</title>
-    <link rel="stylesheet" href="/css/cg.css">
+    <link rel="stylesheet" href="/css/base.css">
 </head>
 <body class="container">
     <div class="row center">
