--- a/rock-protection/index.html
+++ b/rock-protection/index.html
@@ -3,76 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Climber's Guide</title>
-  <link rel="stylesheet" href="pro.css?v=0.1.1">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+  <title>Climber Guide</title>
+  <link rel="stylesheet" href="/css/dual-range-input.css?v=1.0.0">
+  <link rel="stylesheet" href="/css/pro.css?v=0.1.0">
+  <script src="/js/chart.js?v=4.4.8"></script>
+  <!-- <script src="/js/chartjs-plugin-annotation.js?v=3.1.0"></script> -->
+  <script src="/js/chartjs-plugin-datalabels.js?v=2.2.0"></script>
+  <script src="/js/dual-range-input.js?v=1.0.0"></script>
+  <script src="/js/pro.js?v=0.2.0"></script>
 </head>
 <body class="container">
-  <div class="row center">
+  <section class="center">
     <h1>Rock Protection</h1>
-    <!-- <img src="friend-patent.jpg" style="width:80%;"> -->
-  </div>
-  <section class="row">
-    <div class="brand-model-container" style="margin-bottom: 0.5rem;">
-      <p class="center" style="margin-bottom: 0.5rem;">Brand / Models</p>
-      <div class="row brand">
-        <button class="brand" data-brand="Black Diamond">Black Diamond</button>
-        <button class="model" data-brand="Black Diamond" data-model="Camalot C3">Camalot C3</button>
-        <button class="model" data-brand="Black Diamond" data-model="Camalot C4">Camalot C4</button>
-        <button class="model" data-brand="Black Diamond" data-model="Camalot Ultralight">Camalot Ultralight</button>
-        <button class="model" data-brand="Black Diamond" data-model="Camalot X4">Camalot X4</button>
-        <button class="model" data-brand="Black Diamond" data-model="Camalot Z4">Camalot Z4</button>
-      </div>
-      <div class="row brand">
-        <button class="brand" data-brand="DMM Wales">DMM Wales</button>
-        <button class="model" data-brand="DMM Wales" data-model="Dragon">Dragon</button>
-        <button class="model" data-brand="DMM Wales" data-model="Dragonfly">Dragonfly</button>
-      </div>
-      <div class="row brand">
-        <button class="brand" data-brand="FIXE">FIXE</button>
-        <button class="model" data-brand="FIXE" data-model="Alien X">Alien X</button>
-      </div>
-      <div class="row brand">
-        <button class="brand" data-brand="Metolius">Metolius</button>
-        <button class="model" data-brand="Metolius" data-model="Master Cam">Master Cam</button>
-        <button class="model" data-brand="Metolius" data-model="TCU">TCU</button>
-        <button class="model" data-brand="Metolius" data-model="Power Cam">Power Cam</button>
-        <button class="model" data-brand="Metolius" data-model="Supercam">Supercam</button>
-        <button class="model" data-brand="Metolius" data-model="Fat Cam">Fat Cam</button>
-      </div>
-      <div class="row brand">
-        <button class="brand" data-brand="Totem">Totem</button>
-      </div>
-      <div class="row brand">
-        <button class="brand" data-brand="Trango">Trango</button>
-        <button class="model" data-brand="Trango" data-model="Flex">Flex</button>
-      </div>
-      <div class="row brand">
-        <button class="brand" data-brand="Wild Country">Wild Country</button>
-        <button class="model" data-brand="Wild Country" data-model="Friend">Friend</button>
-        <button class="model" data-brand="Wild Country" data-model="Friend Zero">Friend Zero</button>
-      </div>
-    </div>
-    <div class="row center" style="margin-bottom: 0.5rem;">
-      <p style="margin-bottom: 0.5rem;">Range (mm)</p>
-      <span id="dri-min-value"></span>
-      <span>-</span>
-      <span id="dri-max-value"></span>
-      <div class="dual-range-input">
-        <input type="range" min="5" max="325" step="5" value="5" id="min" />
-        <input type="range" min="5" max="325" step="5" value="75" id="max" />
-      </div>
-    </div>
-    <div class="chart-container">
-      <canvas id="all-pro-dynamic"></canvas>
-    </div>
+    <section class="navbar">
+      <a href="#pro-chart">Pro Chart</a>
+    </section>
   </section>
-  <!-- <section class="row">
+  <section id="pro-chart">
+    <h3 class="center">Pro Chart</h3>
+    <section id="pro-chart-container"></section>
+  </section>
+  </section>
+  <section class="row">
     <h4 class="center">SLCD - Friend - Cam</h4>
-    <div class="center">
-    </div>
+    <img src="friend-patent.jpg" style="width:80%;">
   </section>
   <section class="row">
     <h4 class="center">Appendix</h4>
@@ -104,7 +58,7 @@
     <p>
       Single-axle cams can/will fail on the extreme end of undercamming. They do not have a passive strength rating. Double-axle cams however, if placed correctly, can be loaded from underneath the lobes.
     </p>
-  </section> -->
-  <script src="pro.js?v=0.1.2"></script>
+  </section>
+  <script src="index.js?v=0.1.0"></script>
 </body>
 </html>
