render is not fuzzy using new classes. save point

--- a/rock-protection/index.html
+++ b/rock-protection/index.html
@@ -4,16 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Climber's Guide</title>
-  <link rel="stylesheet" href="pro.css?v=0.1.1">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+  <link rel="stylesheet" href="/css/dual-range-input.css?v=1.0.0">
+  <link rel="stylesheet" href="/css/pro.css?v=0.1.0">
+  <script src="/js/chart.js?v=4.4.8"></script>
+  <script src="/js/chartjs-plugin-datalabels.js?v=2.2.0"></script>
+  <script src="/js/dual-range-input.js?v=1.0.0"></script>
+  <script src="/js/pro.js?v=0.2.0"></script>
 </head>
 <body class="container">
   <div class="row center">
     <h1>Rock Protection</h1>
     <!-- <img src="friend-patent.jpg" style="width:80%;"> -->
   </div>
+  <section id="pro-chart">
+    <h3 class="center">Pro Chart</h3>
+    <section id="pro-chart-container"></section>
+  </section>
   <section class="row">
     <div class="brand-model-container" style="margin-bottom: 0.5rem;">
       <p class="center" style="margin-bottom: 0.5rem;">Brand / Models</p>
@@ -105,6 +111,7 @@
       Single-axle cams can/will fail on the extreme end of undercamming. They do not have a passive strength rating. Double-axle cams however, if placed correctly, can be loaded from underneath the lobes.
     </p>
   </section> -->
+  <script src="index.js"></script>
   <script src="pro.js?v=0.1.2"></script>
 </body>
 </html>
