added extra nuts and hexes

--- a/rock-protection/index.html
+++ b/rock-protection/index.html
@@ -9,7 +9,7 @@
   <script src="/js/chart.js?v=4.4.8"></script>
   <script src="/js/chartjs-plugin-datalabels.js?v=2.2.0"></script>
   <script src="/js/dual-range-input.js?v=1.0.0"></script>
-  <script src="/js/pro.js?v=0.2.0"></script>
+  <script src="/js/pro.js?v=0.2.1"></script>
 </head>
 <body class="container">
   <div class="row center">
@@ -20,7 +20,7 @@
     <h3 class="center">Pro Chart</h3>
     <section id="pro-chart-container"></section>
   </section>
-  <section class="row">
+  <!-- <section class="row">
     <div class="brand-model-container" style="margin-bottom: 0.5rem;">
       <p class="center" style="margin-bottom: 0.5rem;">Brand / Models</p>
       <div class="row brand">
@@ -70,7 +70,7 @@
         <input type="range" min="5" max="325" step="5" value="5" id="min" />
         <input type="range" min="5" max="325" step="5" value="75" id="max" />
       </div>
-    </div>
+    </div> -->
     <div class="chart-container">
       <canvas id="all-pro-dynamic"></canvas>
     </div>
@@ -112,6 +112,6 @@
     </p>
   </section> -->
   <script src="index.js"></script>
-  <script src="pro.js?v=0.1.2"></script>
+  <!-- <script src="pro.js?v=0.1.2"></script> -->
 </body>
 </html>
