rock protection chart 1.0.0

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="container">
     <div class="row center">
-        <h2>Climber's Guide</h2>
+        <h2>Climber Guide</h2>
     </div>
     <div class="row navbar center">
         <a href="rock-protection">Rock Protection</a>
