patch image overflow

--- a/rock-protection/index.html
+++ b/rock-protection/index.html
@@ -35,15 +35,11 @@
       </ul>
       
       <h5>Hexes and Nuts</h5>
-      <div >
-        <div >
-          <p>
-            Passive protection is measured from the widest point. Take this into account when comparing to active protection and remember some nuts taper more than others.
-            Nuts are made up of two possible positions (P1, P2), while hexes can have three (P1, P1.5, P2).
-          </p>
-        </div>
-        <img src="hex-and-nut.png" style="border: 1px solid #41444B">
-      </div>
+      <p>
+        Passive protection is measured from the widest point. Take this into account when comparing to active protection and remember some nuts taper more than others.
+        Nuts are made up of two possible positions (P1, P2), while hexes can have three (P1, P1.5, P2).
+      </p>
+      <img src="hex-and-nut.png" style="border: 1px solid #41444B;object-fit: contain;max-width: 100%;">
       <h5>Strength</h5>
       <p>
         For passive protection if P1, P1.5 and P2 have the same strength rating then a single rating will be present the the right of P2 data point.
