add sources, update model names, add extra

--- a/rock-protection/index.html
+++ b/rock-protection/index.html
@@ -9,7 +9,7 @@
   <script src="/js/chart.js?v=4.4.8"></script>
   <script src="/js/chartjs-plugin-datalabels.js?v=2.2.0"></script>
   <script src="/js/dual-range-input.js?v=1.0.0"></script>
-  <script src="/js/pro.js?v=1.3.2"></script>
+  <script src="/js/pro.js?v=1.3.3"></script>
 </head>
 <body class="container">
   <div class="row center">
@@ -40,7 +40,10 @@
         Also remember some nuts taper more than others, which may can more or less suitable depending on the rock type.
         Nuts are made up of two possible positions (P1, P2), while hexes have three (P1, P1.5, P2).
       </p>
-      <img src="hex-and-nut.png" style="border: 1px solid #41444B;object-fit: contain;max-width: 100%;">
+      <div class="row">
+        <img class="six columns" src="hex.png" style="border: 1px solid #41444B;object-fit: contain;max-width: 623px;">
+        <img class="six columns" src="nut.png" style="border: 1px solid #41444B;object-fit: contain;max-width: 623px;">
+      </div>
       <section id="hex-and-nut"></section>
       <h5>Strength</h5>
       <p>
@@ -54,6 +57,200 @@
       </p>
       <section id="strength"></section>
     </section>
+  </section>
+  <section>
+    <h3 class="center">Sources</h3>
+    <h5>Black Diamond</h5>
+    <ul class="row">
+      <div class="six columns">
+        <li><a href="source/black_diamond_camalot_c3.pdf" target="_blank" rel="noopener noreferrer">Camalot C3</a></li>
+        <li><a href="source/black_diamond_camalot_c4_c4_ul.pdf" target="_blank" rel="noopener noreferrer">Camalot C4 & C4 UL</a></li>
+        <li><a href="source/black_diamond_camalot_x4.pdf" target="_blank" rel="noopener noreferrer">Camalot X4</a></li>
+        <li><a href="source/black_diamond_camalot_z4.pdf" target="_blank" rel="noopener noreferrer">Camalot Z4</a></li> 
+        <li><i>Hexentric</i> (BD does not have P1 and P1.5 data, only P2. Confirmed with BD representative)</li>
+      </div>
+      <div class="six columns">
+        <li><a href="source/black_diamond_stopper.png" target="_blank" rel="noopener noreferrer">Stopper</a></li>
+        <li><a href="source/black_diamond_micro_stopper.png" target="_blank" rel="noopener noreferrer">Micro Stopper</a></li>
+        <li>
+          <a href="source/black_diamond_offset_stopper.png" target="_blank" rel="noopener noreferrer">Offset Stopper</a>
+          <span> (Provided directly by BD representative)</span>
+        </li>
+      </div>
+    </ul>
+    <h5>C.A.M.P.</h5>
+    <ul class="row">
+      <div class="six columns">
+        <li>
+          <span>Ball Nut</span>
+          <ul>
+            <li><a href="source/camp_ballnut_manual.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/camp_ballnut_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Pro Nut</span>
+          <ul>
+            <li><a href="source/camp_pro_nut_tricam_tricam_dyneema.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/camp_pro_nut_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Tricam</span>
+          <ul>
+            <li><a href="source/camp_pro_nut_tricam_tricam_dyneema.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/camp_tricam_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+      </div>
+      <div class="six columns">
+        <li>
+          <span>Tricam Dyneema</span>
+          <ul>
+            <li><a href="source/camp_pro_nut_tricam_tricam_dyneema.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/camp_tricam_dyneema_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li><i>Tricam EVO</i> (Camp does not provide P2 data)</li>
+      </div>
+    </ul>
+    <h5>DMM Wales</h5>
+    <ul class="row">
+      <div class="six columns">
+        <li>
+          <span>Dragon</span>
+          <ul>
+            <li><a href="source/dmm_wales_dragon_dragonfly.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_dragon_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Dragonfly</span>
+          <ul>
+            <li><a href="source/dmm_wales_dragon_dragonfly.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_dragonfly_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Wallnut</span>
+          <ul>
+            <li><a href="source/dmm_wales_passive.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_wallnut_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Halfnut</span>
+          <ul>
+            <li><a href="source/dmm_wales_passive.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_halfnut_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Peenut</span>
+          <ul>
+            <li><a href="source/dmm_wales_passive.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_peenut_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+      </div>
+      <div class="six columns">
+        <li>
+          <span>Alloy Offset</span>
+          <ul>
+            <li><a href="source/dmm_wales_passive.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_alloy_offset_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>IMP Brass Nut</span>
+          <ul>
+            <li><a href="source/dmm_wales_passive.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_imp_brass_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Brass Offset</span>
+          <ul>
+            <li><a href="source/dmm_wales_passive.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_brass_offset_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Torque Nut</span>
+          <ul>
+            <li><a href="source/dmm_wales_passive.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_torque_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Torque Nut Wired</span>
+          <ul>
+            <li><a href="source/dmm_wales_passive.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/dmm_wales_torque_wired_specs.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+      </div>
+    </ul>
+    <h5>FIXE</h5>
+    <ul>
+      <li><a href="source/fixe_alien_x.jpg" target="_blank" rel="noopener noreferrer">Alien X</a></li>
+    </ul>
+    <h5>Metolius</h5>
+    <ul class="row">
+      <div class="six columns">
+        <li><a href="source/metolius_cams.pdf" target="_blank" rel="noopener noreferrer">UL Master Cam</a></li>
+        <li><a href="source/metolius_cams.pdf" target="_blank" rel="noopener noreferrer">UL TCU</a></li>
+        <li><a href="source/metolius_cams.pdf" target="_blank" rel="noopener noreferrer">UL Power Cam</a></li>
+        <li><a href="source/metolius_cams.pdf" target="_blank" rel="noopener noreferrer">UL Fat Cam</a></li>
+      </div>
+      <div class="six columns">
+        <li><a href="source/metolius_cams.pdf" target="_blank" rel="noopener noreferrer">Supercam</a></li>
+        <li><a href="source/metolius_passive.pdf" target="_blank" rel="noopener noreferrer">Astro Nuts</a></li>
+        <li><a href="source/metolius_passive.pdf" target="_blank" rel="noopener noreferrer">Big Nuts</a></li>
+        <li><a href="source/metolius_passive.pdf" target="_blank" rel="noopener noreferrer">UL Curve Nuts</a></li>
+      </div>
+    </ul>
+    <h5>Totem</h5>
+    <ul>
+      <li><a href="source/totem_cam.pdf" target="_blank" rel="noopener noreferrer">Totem Cam</a></li>
+    </ul>
+    <h5>Trango</h5>
+    <ul>
+      <li><a href="source/trango_big_bro_2.png" target="_blank" rel="noopener noreferrer">Big Bro 2.0</a></li>
+      <li><i>Offset Nuts</i> (P1 measurements are from the bottom of the thin face, not the top. Inconsistent with how other brands measure passive gear. Will need to hand measure...)</li>
+      <li><i>BallNutz</i> (measurements are inconsistent, unsure what method was used. skipping for now)</li>
+      <li><a href="source/trango_flex_cam.png" target="_blank" rel="noopener noreferrer">Flex Cam</a></li>
+    </ul>
+    <h5>Wild Country</h5>
+    <ul class="row">
+      <div class="six columns">
+        <li>
+          <span>Friend</span>
+          <ul>
+            <li><a href="source/wild_country_friend.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/wild_country_friend.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+        <li>
+          <span>Zero Friend</span>
+          <ul>
+            <li><a href="source/wild_country_zero_friend.pdf" target="_blank" rel="noopener noreferrer">source 1</a></li>
+            <li><a href="source/wild_country_zero_friend.png" target="_blank" rel="noopener noreferrer">source 2</a></li>
+          </ul>
+        </li>
+      </div>
+      <div class="six columns">
+        <li><a href="source/wild_country_passive.pdf" target="_blank" rel="noopener noreferrer">Rock</a></li>
+        <li><a href="source/wild_country_passive.pdf" target="_blank" rel="noopener noreferrer">Rock Classic</a></li>
+        <li><a href="source/wild_country_passive.pdf" target="_blank" rel="noopener noreferrer">Rock Offset</a></li>
+        <li><a href="source/wild_country_passive.pdf" target="_blank" rel="noopener noreferrer">Rockcentric</a></li>
+      </div>
+    </ul>
+  </section>
+  <section class="center">
+    <h3>Extra</h3>
+    <img src="friend-patent.jpg" style="border: 1px solid #41444B;object-fit: contain;max-width: 100%;">
+    <div style="margin-bottom: 4rem;">Ray Jardine's 1978 'Friend' US Patent (4,184,657)</div>
   </section>
   <script src="index.js?v=1.1.1"></script>
 </body>
